--- a/public/styles.css
+++ b/public/styles.css
@@ -15,6 +15,8 @@ td {
 }
 
 .dateText {
+  vertical-align: middle;
+  display: table-cell;
   width: 38px;
   height: 38px;
   font-family: "Helvetica Neue", sans-serif;
